--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,12 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: #F4F2EF;
+  font-family: "effra",arial,helvetica,sans-serif;
+  font-size: 15px;
+
 }
 
 code {
