--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@ body {
   padding: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: #F4F2EF;
+  background: #FFF;
   font-family: "effra",arial,helvetica,sans-serif;
   font-size: 15px;
 
